Fix left margin for charts on tablet

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -139,6 +139,7 @@
 	.ct-chart:last-child {
 		@include shift(2 of 30);
 		margin-bottom: 0;
+		margin-left: 0;
 	}
 }
 
